--- a/hacker-monster/pom.xml
+++ b/hacker-monster/pom.xml
@@ -47,5 +47,10 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-security</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-validator</artifactId>
+      <version>5.4.1.Final</version>
+    </dependency>
   </dependencies>
 </project>
