--- a/hacker-monster/hm-rest/pom.xml
+++ b/hacker-monster/hm-rest/pom.xml
@@ -69,6 +69,11 @@
       <artifactId>hm-persistent</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
+    <dependency>
+      <groupId>gls.hm</groupId>
+      <artifactId>hm-liquibase</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
   </dependencies>
 
   <build>
