--- a/hacker-monster/hm-persistent/pom.xml
+++ b/hacker-monster/hm-persistent/pom.xml
@@ -26,8 +26,10 @@
       <artifactId>guava</artifactId>
       <version>27.0.1-jre</version>
     </dependency>
-
-
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-jpamodelgen</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
