[BE] Finished feature for creating a feed

--- a/hacker-monster/hm-rest/pom.xml
+++ b/hacker-monster/hm-rest/pom.xml
@@ -79,6 +79,11 @@
       <artifactId>hm-topic</artifactId>
       <version>${parent.version}</version>
     </dependency>
+    <dependency>
+      <groupId>gls.hm</groupId>
+      <artifactId>hm-feed</artifactId>
+      <version>${parent.version}</version>
+    </dependency>
   </dependencies>
 
   <build>
