--- a/hacker-monster/hm-user/pom.xml
+++ b/hacker-monster/hm-user/pom.xml
@@ -25,8 +25,9 @@
             <version>6.0.2.Final</version>
         </dependency>
         <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-core</artifactId>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+            <version>1.9.4</version>
         </dependency>
     </dependencies>
     <parent>
