[BE] Created API for uploading files

--- a/hacker-monster/pom.xml
+++ b/hacker-monster/pom.xml
@@ -33,6 +33,7 @@
     <module>hm-liquibase</module>
     <module>hm-integration-test</module>
     <module>hm-feed</module>
+    <module>hm-file</module>
   </modules>
 
   <dependencies>
