--- a/hacker-monster/hm-rest/pom.xml
+++ b/hacker-monster/hm-rest/pom.xml
@@ -84,6 +84,11 @@
       <artifactId>hm-feed</artifactId>
       <version>${parent.version}</version>
     </dependency>
+    <dependency>
+      <groupId>gls.hm</groupId>
+      <artifactId>hm-file</artifactId>
+      <version>${parent.version}</version>
+    </dependency>
   </dependencies>
 
   <build>
